fixed unresponsice landing height on mobile

--- a/_assets/stylesheets/custom.sass
+++ b/_assets/stylesheets/custom.sass
@@ -602,7 +602,7 @@ ul.contact-info
   #heading
     font-size: 100% !important
 
-@media (max-height: 750px) and (orientation: portrait)
+@media (max-height: 1000px) and (orientation: portrait)
   .landing
     height: 100%
     #heading-wrapper
